# platform

./: .gitignore  LICENSE  README.md  cloudR.md
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  test-graphql-gcp-integration.yml
3d/: index.html  main.js  next.config.mjs  package-lock.json  package.json  styles.css  tailwind.config.js  tailwind.config.ts  vercel.json  vite.config.mjs
3d/GaussianSplats3D/: package-lock.json  package.json  rollup.config.js
3d/app/: layout.tsx  page.tsx
3d/public/: contributors.md
api/: .firebaserc  README.md
api/functions/: package-lock.json  package.json
archive/: cloudR.md  convert_nc_to_parquet.py  copernicus-load-chlorophyll.ipynb  copernicus-nc-to-parquet.md  download-in-parallel-other-variables.ipynb
graphql/: Cargo.toml  Dockerfile  README.md  rustfmt.toml
graphql/src/: bigquery.rs  graphiql.html  graphql.rs  main.rs  models.rs
sharktrack/: .env.example  .eslintrc.cjs  README.md  drizzle.config.ts  package.json  pnpm-lock.yaml  start-database.sh  vercel.json
sharktrack/src/: middleware.ts
web/: .firebaserc  README.md  example.env  package-lock.json  package.json  tsconfig.json
web/.firebase/: hosting.YnVpbGQ.cache  hosting.cHVibGlj.cache
web/public/: index.html  manifest.json
web/src/: App.tsx  Auth.tsx  DataTable.tsx  DataTableFlat.tsx  DataTableLink.tsx  Datasets.tsx  DownloadFile.tsx  Explorer.tsx  FilePreviewAndUpload.tsx  FileUpload.tsx  Files.tsx  Ingest.tsx  JobResults.tsx  JobResultsTable.tsx  JobStatus.tsx  JobStatusPage.tsx  JobsOverview.tsx  Map.tsx  Query.tsx  (+27 more)
(+70 files in other folders)
