[package]
name = "wildflow-graphql-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
gcp-bigquery-client = "0.18.0"
serde_json = "1.0"
futures = "0.3"
anyhow = "1.0.72"
async-graphql = { version = "6.0.1", features = [
  "log",
  "apollo_persisted_queries",
  "dataloader",
  "chrono",
  "tracing",
  "graphiql",
] }
async-graphql-axum = "6.0.1"
axum = "0.6.20"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
async-trait = "0.1.73"
axum-auth = "0.4.0"
jsonwebtoken = "8.3.0"
reqwest = { version = "0.11.20", features = ["json"] }
openssl = { version = "0.10.57", features = ["vendored"] }
shaku = { version = "0.6.1", features = ["thread_safe"] }
shaku_axum = "0.4.0"
http = "0.2"
